--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,8 +10,7 @@
 		{
 			"src": "/icons/icon-512.png",
 			"type": "image/png",
-			"sizes": "512x512",
-			"purpose": "any maskable"
+			"sizes": "512x512"
 		},
 		{
 			"src": "/icons/icon-144.png",
