--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,27 +10,32 @@
 		{
 			"src": "/icons/icon-512.png",
 			"type": "image/png",
-			"sizes": "512x512"
+			"sizes": "512x512",
+			"purpose": "any"
 		},
 		{
 			"src": "/icons/icon-144.png",
 			"type": "image/png",
-			"sizes": "144x144"
+			"sizes": "144x144",
+			"purpose": "any"
 		},
 		{
 			"src": "/icons/icon-128.png",
 			"type": "image/png",
-			"sizes": "128x128"
+			"sizes": "128x128",
+			"purpose": "any"
 		},
 		{
 			"src": "/icons/icon-96.png",
 			"type": "image/png",
-			"sizes": "96x96"
+			"sizes": "96x96",
+			"purpose": "any"
 		},
 		{
 			"src": "/icons/icon-72.png",
 			"type": "image/png",
-			"sizes": "72x72"
+			"sizes": "72x72",
+			"purpose": "any"
 		}
 	]
 }
