--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"animate.css": "^4.1.1",
 		"dom-to-image": "^2.6.0",
-		"jspdf": "^2.5.1"
+		"jspdf": "^2.5.1",
+		"jszip": "^3.10.1"
 	}
 }
