--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"animate.css": "^4.1.1",
 		"dom-to-image": "^2.6.0",
 		"jspdf": "^2.5.1",
-		"jszip": "^3.10.1"
+		"jszip": "^3.10.1",
+		"swiper": "^10.3.1"
 	}
 }
